[package]
name = "transactions-engine"
description = "Transactions engine"
version = "0.1.0"
edition = "2018"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tx_engine"
path = "src/lib.rs"

[[bin]]
name = "tx_engine"
path = "src/main.rs"

[dependencies]
csv = "1.1"
derive_more = "0.99"
env_logger = "0.9"
log = "0.4"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.26", features = ["serde-str", "serde-arbitrary-precision"] }
derive-new = "0.5"
